Fix search widget vertical alignment in header builder
Added inline-flex display and align-items: center for search widget
when inside header builder to match menu toggle styling.

--- a/assets/scss/main/_navigation.scss
+++ b/assets/scss/main/_navigation.scss
@@ -348,6 +348,12 @@
 	column-gap: 3px;
 }
 
+.use-header-builder .wpbf-nav-item.wpbf-menu-item-search,
+.use-header-builder .wpbf-mobile-nav-item.wpbf-menu-item-search {
+	display: inline-flex;
+	align-items: center;
+}
+
 // SVG support (Hamburger)
 .wpbf-mobile-menu-hamburger {
 	.wpbf-mobile-menu-toggle {
